# adversarial-embodied-ai

./: .gitignore  ASR_Finetune_Summary.csv  ASR_Finetune_Summary.txt  ASR_Finetune_Summary.xlsx  ASR_Finetuned_Research_Report.txt  BHARAT_PROMPTS.md  CPU_Finetuning_Report.md  EXECUTION_STEPS.md  Fine_Tuning_Execution_Report.md  Modelfile_redagent  README.md  RED_TEAM_SPRINT_PLAYBOOK.md  Red_Agent_FineTune_Colab.ipynb  auto_finetune_red.py  bharat_attacks_colab_gemma_250attacks.ipynb  bharat_attacks_vs_qwen25.ipynb  bharat_attacks_vs_qwen3.ipynb  bharat_finetuned_attack.ipynb  bharat_finetuned_attack.py  bharat_metrics.json  bharat_strategies.py  bharat_verdicts.jsonl  convert_dataset.py  cpu_finetune_real.py  cpu_log.txt  cpu_red_team_dataset.jsonl  err.txt  execute_blue.py  execute_judge.py  execute_pipeline.py  execute_red.py  export_summary_to_excel.py  finetune_red_agent.py  out.txt  red_team_dataset.csv  repo_analysis.txt  repo_analysis2.txt  repo_root.json  run_dolphin_attack.py  test.py  (+1 more)
RED-TEAM-AI2THOR-main/: .env.example  .gitignore  ATTACK_MODE_README.md  EVALUATION.md  LICENSE  README.md  frontend.html  pyproject.toml
RED-TEAM-AI2THOR-main/constitution/: .gitignore  Main_Kaggle.py  best_prompt.py  constitutions.py  results_model_qwen3_4B.json  utils.py
RED-TEAM-AI2THOR-main/data/: api_cost_breakdown.xlsx  floorplan_messy_objects.txt  messy_scene_objects.json
RED-TEAM-AI2THOR-main/dataset/: safe_detailed_1009.jsonl  safe_detailed_messy.jsonl  safe_detailed_messy.jsonl.bak  unsafe_detailed_fp1.jsonl  unsafe_detailed_messy.jsonl  (+1 more)
prompts/: __init__.py  (+4 more)
(+95 files in other folders)
