[project]
name = "ai2thor-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai2thor>=5.0.0",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "langfuse>=3.14.5",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
    "uvicorn>=0.42.0",
    "gdm-concordia>=2.4.0",
    "pydantic>=2.0.0",
    "ollama>=0.6.1",
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
]

[project.scripts]
lab = "ai2thor_lab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai2thor_lab"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
